# hpt

./: meson.build  meson_options.txt
subprojects/: areafix.wrap  fidoconf.wrap  hptzip.wrap  perlstatic.wrap  smapi.wrap
